--- a/index.html
+++ b/index.html
@@ -323,51 +323,50 @@
 
           <div class="people-grid big">
             <div class="person big">
-              <img class="avatar big" src="organizers/org-1.jpg" alt="Organizer 1 headshot" />
+              <img class="avatar big" src="organizers/charlotte_bunne.jpeg" alt="Organizer 1 headshot" />
               <div>
-                <div class="name">Organizer Name 1</div>
-                <div class="affil">Affiliation</div>
+                <div class="name">Charlotte Bunne</div>
+                <div class="affil">EPFL, Switzerland</div>
               </div>
             </div>
 
             <div class="person big">
-              <img class="avatar big" src="organizers/org-2.jpg" alt="Organizer 2 headshot" />
+              <img class="avatar big" src="organizers/giannis_daras.jpeg" alt="Organizer 2 headshot" />
               <div>
-                <div class="name">Organizer Name 2</div>
-                <div class="affil">Affiliation</div>
+                <div class="name">Giannis Daras</div>
+                <div class="affil">MIT, USA</div>
               </div>
             </div>
 
             <div class="person big">
-              <img class="avatar big" src="organizers/org-3.jpg" alt="Organizer 3 headshot" />
+              <img class="avatar big" src="organizers/paris_giampouras.jpeg" alt="Organizer 3 headshot" />
               <div>
-                <div class="name">Organizer Name 3</div>
-                <div class="affil">Affiliation</div>
+                <div class="name">Paris Giampouras</div>
+                <div class="affil">University of Warwick</div>
               </div>
             </div>
 
             <div class="person big">
-              <img class="avatar big" src="organizers/org-4.jpg" alt="Organizer 4 headshot" />
+              <img class="avatar big" src="organizers/yinghzen_li.jpg" alt="Organizer 4 headshot" />
               <div>
-                <div class="name">Organizer Name 4</div>
-                <div class="affil">Affiliation</div>
+                <div class="name">Yingzhen Li</div>
+                <div class="affil">Implerial College, UK</div>
               </div>
             </div>
+              <div class="person big">
+              <img class="avatar big" src="organizers/morteza_mardani.jpeg" alt="Organizer 6 headshot" />
+              <div>
+                <div class="name">Morteza Mardani</div>
+                <div class="affil">NVIDIA, USA</div>
+              </div>
 
             <div class="person big">
-              <img class="avatar big" src="organizers/org-5.jpg" alt="Organizer 5 headshot" />
+              <img class="avatar big" src="organizers/Johann_Wenckstern.jpeg" alt="Organizer 5 headshot" />
               <div>
-                <div class="name">Organizer Name 5</div>
-                <div class="affil">Affiliation</div>
+                <div class="name">Johann Wenckstern</div>
+                <div class="affil">EPFL, Switzerland</div>
               </div>
             </div>
-
-            <div class="person big">
-              <img class="avatar big" src="organizers/org-6.jpg" alt="Organizer 6 headshot" />
-              <div>
-                <div class="name">Organizer Name 6</div>
-                <div class="affil">Affiliation</div>
-              </div>
             </div>
           </div>
         </article>
