--- a/index.html
+++ b/index.html
@@ -279,9 +279,9 @@
             <div class="person big">
               <img class="avatar big" src="speakers/speaker-1.jpg" alt="Speaker 1 headshot" />
               <div>
-                <div class="name">Speaker Name 1</div>
+                <div class="name">Yaron Lipman</div>
                 <div class="role">Invited Speaker</div>
-                <div class="affil">Affiliation / Lab</div>
+                <div class="affil">Meta, FAIR</div>
               </div>
             </div>
 
@@ -353,11 +353,13 @@
                 <div class="affil">Implerial College, UK</div>
               </div>
             </div>
+            
               <div class="person big">
               <img class="avatar big" src="organizers/morteza_mardani.jpeg" alt="Organizer 6 headshot" />
               <div>
                 <div class="name">Morteza Mardani</div>
                 <div class="affil">NVIDIA, USA</div>
+              </div>
               </div>
 
             <div class="person big">
@@ -367,7 +369,7 @@
                 <div class="affil">EPFL, Switzerland</div>
               </div>
             </div>
-            </div>
+           
           </div>
         </article>
       </div>
