--- a/index.html
+++ b/index.html
@@ -281,34 +281,52 @@
               <div>
                 <div class="name">Yaron Lipman</div>
                 <div class="role">Invited Speaker</div>
-                <div class="affil">Meta, FAIR</div>
+                <div class="affil">Meta (FAIR), Israel</div>
               </div>
             </div>
 
             <div class="person big">
               <img class="avatar big" src="speakers/speaker-2.jpg" alt="Speaker 2 headshot" />
               <div>
-                <div class="name">Speaker Name 2</div>
+                <div class="name">Jong Chul Ye </div>
                 <div class="role">Invited Speaker</div>
-                <div class="affil">Affiliation / Lab</div>
+                <div class="affil">KAIST, South Korea</div>
               </div>
             </div>
 
             <div class="person big">
               <img class="avatar big" src="speakers/panelist-1.jpg" alt="Panelist 1 headshot" />
               <div>
-                <div class="name">Panelist Name 1</div>
-                <div class="role">Panelist</div>
-                <div class="affil">Affiliation / Lab</div>
+                <div class="name">Ruiqi Gao </div>
+                <div class="role">Invited Speaker</div>
+                <div class="affil">Google DeepMind, USA</div>
               </div>
             </div>
 
             <div class="person big">
               <img class="avatar big" src="speakers/panelist-2.jpg" alt="Panelist 2 headshot" />
               <div>
-                <div class="name">Panelist Name 2</div>
-                <div class="role">Panelist</div>
-                <div class="affil">Affiliation / Lab</div>
+                <div class="name">Volodymyr Kuleshov </div>
+                <div class="role">Invited Speaker</div>
+                <div class="affil">Cornell University, USA</div>
+              </div>
+            </div>
+
+            <div class="person big">
+              <img class="avatar big" src="speakers/panelist-2.jpg" alt="Panelist 2 headshot" />
+              <div>
+                <div class="name">Marta Skreta  </div>
+                <div class="role">Invited Speaker</div>
+                <div class="affil">University of Toronto, Canada</div>
+              </div>
+            </div>
+
+            <div class="person big">
+              <img class="avatar big" src="speakers/panelist-2.jpg" alt="Panelist 2 headshot" />
+              <div>
+                <div class="name">Peter Holderieth </div>
+                <div class="role">Invited Speaker</div>
+                <div class="affil">MIT, USA</div>
               </div>
             </div>
           </div>
