--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
             </div>
 
             <div class="person big">
-              <img class="avatar big" src="organizers/yinghzen_li.jpg" alt="Organizer 4 headshot" />
+              <img class="avatar big" src="organizers/yinghzen_li.jpeg" alt="Organizer 4 headshot" />
               <div>
                 <div class="name">Yingzhen Li</div>
                 <div class="affil">Implerial College, UK</div>
