--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 
           <div class="people-grid big">
             <div class="person big">
-              <img class="avatar big" src="speakers/speaker-1.jpg" alt="Speaker 1 headshot" />
+              <img class="avatar big" src="speakers/yaron_lipman.jpeg" alt="Speaker 1 headshot" />
               <div>
                 <div class="name">Yaron Lipman</div>
                 <div class="role">Invited Speaker</div>
@@ -286,7 +286,7 @@
             </div>
 
             <div class="person big">
-              <img class="avatar big" src="speakers/speaker-2.jpg" alt="Speaker 2 headshot" />
+              <img class="avatar big" src="speakers/jong_chul_ye.jpeg" alt="Speaker 2 headshot" />
               <div>
                 <div class="name">Jong Chul Ye </div>
                 <div class="role">Invited Speaker</div>
@@ -295,7 +295,7 @@
             </div>
 
             <div class="person big">
-              <img class="avatar big" src="speakers/panelist-1.jpg" alt="Panelist 1 headshot" />
+              <img class="avatar big" src="speakers/quiqi_gao.jpeg" alt="Panelist 1 headshot" />
               <div>
                 <div class="name">Ruiqi Gao </div>
                 <div class="role">Invited Speaker</div>
@@ -304,7 +304,7 @@
             </div>
 
             <div class="person big">
-              <img class="avatar big" src="speakers/panelist-2.jpg" alt="Panelist 2 headshot" />
+              <img class="avatar big" src="speakers/volodymyr_kuleshov.jpeg" alt="Panelist 2 headshot" />
               <div>
                 <div class="name">Volodymyr Kuleshov </div>
                 <div class="role">Invited Speaker</div>
@@ -313,7 +313,7 @@
             </div>
 
             <div class="person big">
-              <img class="avatar big" src="speakers/panelist-2.jpg" alt="Panelist 2 headshot" />
+              <img class="avatar big" src="speakers/marta_skreta.jpeg" alt="Panelist 2 headshot" />
               <div>
                 <div class="name">Marta Skreta  </div>
                 <div class="role">Invited Speaker</div>
@@ -322,7 +322,7 @@
             </div>
 
             <div class="person big">
-              <img class="avatar big" src="speakers/panelist-2.jpg" alt="Panelist 2 headshot" />
+              <img class="avatar big" src="speakers/peter_holderieth.jpeg" alt="Panelist 2 headshot" />
               <div>
                 <div class="name">Peter Holderieth </div>
                 <div class="role">Invited Speaker</div>
