Update affiliations and image source for organizers

--- a/index.html
+++ b/index.html
@@ -360,12 +360,12 @@
               <img class="avatar big" src="organizers/paris_giampouras.jpeg" alt="Organizer 3 headshot" />
               <div>
                 <div class="name">Paris Giampouras</div>
-                <div class="affil">University of Warwick</div>
+                <div class="affil">University of Warwick, UK</div>
               </div>
             </div>
 
             <div class="person big">
-              <img class="avatar big" src="organizers/yinghzen_li.jpeg" alt="Organizer 4 headshot" />
+              <img class="avatar big" src="organizers/yingzhen_li.jpeg" alt="Organizer 4 headshot" />
               <div>
                 <div class="name">Yingzhen Li</div>
                 <div class="affil">Implerial College, UK</div>
