--- a/index.html
+++ b/index.html
@@ -271,10 +271,7 @@
         <!-- FULL-WIDTH -->
         <article class="card span12" id="speakers">
           <h3>Invited Speakers &amp; Panelists (preview)</h3>
-          <p class="subtitle" style="margin:0 0 10px;">
-            Replace placeholders with names/affiliations and headshots as they are confirmed.
-          </p>
-
+          
           <div class="people-grid big">
             <div class="person big">
               <img class="avatar big" src="speakers/yaron_lipman.jpeg" alt="Speaker 1 headshot" />
@@ -295,7 +292,7 @@
             </div>
 
             <div class="person big">
-              <img class="avatar big" src="speakers/quiqi_gao.jpeg" alt="Panelist 1 headshot" />
+              <img class="avatar big" src="speakers/ruiqi_gao.jpeg" alt="Panelist 1 headshot" />
               <div>
                 <div class="name">Ruiqi Gao </div>
                 <div class="role">Invited Speaker</div>
