--- a/index.html
+++ b/index.html
@@ -332,45 +332,25 @@
 
         <!-- FULL-WIDTH -->
         <article class="card span12" id="speakers">
-          <h3>Panelists (preview)</h3>
+          <h3>Panelists</h3>
           
           <div class="people-grid big">
             <div class="person big">
               <img class="avatar big" src="speakers/yaron_lipman.jpeg" alt="Speaker 1 headshot" />
               <div>
-                <div class="name">Yaron Lipman</div>
-                <div class="role">Invited Speaker</div>
-                <div class="affil">Meta (FAIR), Israel</div>
+                <div class="name">Arash Vahdat</div>
+                <div class="affil">NVIDIA, USA</div>
               </div>
             </div>
 
             <div class="person big">
               <img class="avatar big" src="speakers/jong_chul_ye.jpeg" alt="Speaker 2 headshot" />
               <div>
-                <div class="name">Jong Chul Ye </div>
-                <div class="role">Invited Speaker</div>
-                <div class="affil">KAIST, South Korea</div>
+                <div class="name">Karsten Kreis  </div>
+                <div class="affil">NVIDIA, USA</div>
               </div>
             </div>
 
-            <div class="person big">
-              <img class="avatar big" src="speakers/ruiqi_gao.jpeg" alt="Panelist 1 headshot" />
-              <div>
-                <div class="name">Ruiqi Gao </div>
-                <div class="role">Invited Speaker</div>
-                <div class="affil">Google DeepMind, USA</div>
-              </div>
-            </div>
-
-            <div class="person big">
-              <img class="avatar big" src="speakers/volodymyr_kuleshov.jpeg" alt="Panelist 2 headshot" />
-              <div>
-                <div class="name">Volodymyr Kuleshov </div>
-                <div class="role">Invited Speaker</div>
-                <div class="affil">Cornell University, USA</div>
-              </div>
-            </div>
-            
           </div>
         </article>
 
