Update panelist images and add Tali Dekel

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
           
           <div class="people-grid big">
             <div class="person big">
-              <img class="avatar big" src="speakers/yaron_lipman.jpeg" alt="Speaker 1 headshot" />
+              <img class="avatar big" src="panelists/arash_vahdat.jpeg" alt="Speaker 1 headshot" />
               <div>
                 <div class="name">Arash Vahdat</div>
                 <div class="affil">NVIDIA, USA</div>
@@ -344,10 +344,18 @@
             </div>
 
             <div class="person big">
-              <img class="avatar big" src="speakers/jong_chul_ye.jpeg" alt="Speaker 2 headshot" />
+              <img class="avatar big" src="panelists/karsten_kreis.jpeg" alt="Speaker 2 headshot" />
               <div>
                 <div class="name">Karsten Kreis  </div>
                 <div class="affil">NVIDIA, USA</div>
+              </div>
+            </div>
+
+              <div class="person big">
+              <img class="avatar big" src="panelists/tali_dekel.jpeg" alt="Speaker 2 headshot" />
+              <div>
+                <div class="name">Tali Dekel  </div>
+                <div class="affil">Weizman Institute, Israel</div>
               </div>
             </div>
 
