--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
       </div>
     </section>
 
-    <section id="subscribe">
+  <!--  <section id="subscribe">
       <div class="grid">
         <article class="card span12">
           <h3>Subscribe for updates</h3>
@@ -474,6 +474,8 @@
         </article>
       </div>
     </section>
+
+    -->
 
     <section id="contact">
       <div class="grid">
