Update organizer section and iframe source
Removed instructions for uploading organizer photos and updated iframe source.

--- a/index.html
+++ b/index.html
@@ -365,10 +365,7 @@
         <!-- FULL-WIDTH -->
         <article class="card span12" id="organizers">
           <h3>Organizing Team</h3>
-          <p class="subtitle" style="margin:0 0 10px;">
-            Upload 6 organizer photos under <code>organizers/</code> and match filenames below.
-          </p>
-
+          
           <div class="people-grid big">
             <div class="person big">
               <img class="avatar big" src="organizers/charlotte_bunne.jpeg" alt="Organizer 1 headshot" />
@@ -435,7 +432,7 @@
           <!-- Replace YOUR_FORM_ID with your Google Form embed URL -->
           <div style="border:1px solid #1e232b; border-radius:16px; overflow:hidden; background:#0f1318;">
             <iframe
-              src="https://docs.google.com/forms/d/e/YOUR_FORM_ID/viewform?embedded=true"
+              src="embedded=true"
               width="100%"
               height="900"
               frameborder="0"
@@ -474,7 +471,6 @@
         </article>
       </div>
     </section>
-
     -->
 
     <section id="contact">
