--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
 
           <p class="subtitle" style="margin-top:10px">
             Google Forms → <strong>Send</strong> → <strong>&lt;&gt;</strong> (embed) → copy the iframe link and replace
-            <code>YOUR_FORM_ID</code>.
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScJbX-5RyGqSVVZt3siKkbwkfy1ol0mMQCJynICxnngN92RFw/viewform?embedded=true" width="640" height="2023" frameborder="0" marginheight="0" marginwidth="0"></iframe>.
           </p>
         </article>
       </div>
