Revise ReALM-GEN description and topics
Updated the description of ReALM-GEN to include its focus on post-training and inference-time alignment, along with topics of interest and applications.

--- a/index.html
+++ b/index.html
@@ -223,18 +223,18 @@
         <article class="card span6">
           <h3>About</h3>
           <p>
-            ReALM-GEN brings together researchers and practitioners working on aligning flow- and diffusion-based
-            models with real-world constraints and human preferences. Topics include distribution tilting, reward-guided
-            generation, discrete diffusion guidance, test-time scaling,
-            and applications in language, vision, scientific imaging, molecules, and robotics.
+            ReALM–GEN focuses on post-training and inference-time alignment of diffusion- and flow-based generative models—treating controlled generation as sampling from a tilted distribution that incorporates rewards for constraints and preferences. The goal is to connect theory (e.g., distribution tilting / SOC / OT perspectives) with methods (e.g., guidance, reward-based fine-tuning, test-time adaptation) and real deployments (imaging, language/multimodal, molecules, robotics). 
+ 
+<p> Topics of interest </p>
+We welcome submissions on (and beyond):
+Theory: distribution tilting & energy-based views; stochastic optimal control / Schrödinger bridges / OT connections; identifiability & steerability of diffusion/flows. 
+          
+Methodology: supervised / reward-based / sampling-based post-training; efficient conditional generation and constraint satisfaction (guidance, adapters, plug-and-play); test-time scaling and inference-time alignment; discrete diffusion guidance and diffusion language models. 
+
+Applications: inverse problems (e.g., medical/scientific imaging), vision & robotics, language and multimodal reasoning, tabular synthesis, protein/molecule design, and safety alignment.
           </p>
         </article>
-        <article class="card span6">
-          <h3>Goals</h3>
-          <ul class="list">
-            <li>Bridge theory and practice of post-training and inference-time alignment of diffusion and flow models.</li>
-          </ul>
-        </article>
+
       </div>
     </section>
 
