Revise 'About' section and add 'Call for Papers'
Updated the 'About' section to include a 'Call for Papers' and detailed topics of interest.

--- a/index.html
+++ b/index.html
@@ -220,20 +220,32 @@
 
     <section id="about">
       <div class="grid">
-        <article class="card span12">
-          <h3>About</h3>
-          <p>
-            ReALM–GEN focuses on post-training and inference-time alignment of diffusion- and flow-based generative models—treating controlled generation as sampling from a tilted distribution that incorporates rewards for constraints and preferences. The goal is to connect theory (e.g., distribution tilting / SOC / OT perspectives) with methods (e.g., guidance, reward-based fine-tuning, test-time adaptation) and real deployments (imaging, language/multimodal, molecules, robotics). 
- 
-<p> Topics of interest </p>
-We welcome submissions on (and beyond):
-Theory: distribution tilting & energy-based views; stochastic optimal control / Schrödinger bridges / OT connections; identifiability & steerability of diffusion/flows. 
-          
-Methodology: supervised / reward-based / sampling-based post-training; efficient conditional generation and constraint satisfaction (guidance, adapters, plug-and-play); test-time scaling and inference-time alignment; discrete diffusion guidance and diffusion language models. 
+   <article class="card span12">
+  <h2>Call for Papers</h2>
 
-Applications: inverse problems (e.g., medical/scientific imaging), vision & robotics, language and multimodal reasoning, tabular synthesis, protein/molecule design, and safety alignment.
-          </p>
-        </article>
+  <p>
+    <strong>ReALM–GEN</strong> focuses on <strong>post-training</strong> and <strong>inference-time alignment</strong> of diffusion- and flow-based generative models—treating controlled generation as sampling from a <em>tilted distribution</em> that incorporates rewards for real-world <strong>constraints</strong> and <strong>preferences</strong>.
+    Our goal is to connect <strong>theory</strong> (e.g., distribution tilting / stochastic optimal control / optimal transport perspectives) with <strong>methods</strong> (e.g., guidance, reward-based fine-tuning, test-time adaptation) and <strong>real deployments</strong> (imaging, language/multimodal, molecules, robotics).
+  </p>
+
+  <h3>Topics of interest</h3>
+  <p>We welcome submissions on (and beyond):</p>
+
+  <ul>
+    <li>
+      <strong>Theory:</strong>
+      distribution tilting and energy-based views; stochastic optimal control; Schrödinger bridges / optimal transport connections; identifiability and steerability of diffusion/flow models.
+    </li>
+    <li>
+      <strong>Methodology:</strong>
+      supervised / reward-based / sampling-based post-training; efficient conditional generation and constraint satisfaction (guidance, adapters, plug-and-play); test-time scaling and inference-time alignment; discrete diffusion guidance and diffusion language models.
+    </li>
+    <li>
+      <strong>Applications:</strong>
+      inverse problems (e.g., medical/scientific imaging), vision and robotics, language and multimodal reasoning, tabular synthesis, protein/molecule design, and safety alignment.
+    </li>
+  </ul>
+</article>
 
       </div>
     </section>
