--- a/index.html
+++ b/index.html
@@ -433,29 +433,36 @@
     </section>
 
     <!-- NEW -->
-    <section id="reviewers">
-      <div class="grid">
-        <article class="card span12">
-          <h3>Reviewer Nominations</h3>
-          <p>
-            Nominate yourself or others to serve as reviewers. Please fill out the form below.
-          </p>
+<section id="reviewers">
+  <div class="grid">
+    <article class="card span12">
+      <h3>Reviewer Nominations</h3>
+      <p>
+        Nominate yourself or others to serve as reviewers. Please fill out the form below.
+      </p>
 
-          <!-- Replace YOUR_FORM_ID with your Google Form embed URL -->
-          <div style="border:1px solid #1e232b; border-radius:16px; overflow:hidden; background:#0f1318;">
-            <iframe
-              src="embedded=true"
-              width="100%"
-              height="900"
-              frameborder="0"
-              marginheight="0"
-              marginwidth="0"
-              style="display:block; border:0;"
-            >https://docs.google.com/forms/d/e/1FAIpQLScJbX-5RyGqSVVZt3siKkbwkfy1ol0mMQCJynICxnngN92RFw/viewform?embedded=true></iframe>
-          </div>
-        </article>
+      <div style="border:1px solid #1e232b; border-radius:16px; overflow:hidden; background:#0f1318;">
+        <iframe
+          src="https://docs.google.com/forms/d/e/1FAIpQLScJbX-5RyGqSVVZt3siKkbwkfy1ol0mMQCJynICxnngN92RFw/viewform?embedded=true"
+          width="100%"
+          height="900"
+          style="display:block; border:0;"
+          loading="lazy"
+          title="Reviewer nominations form"
+        >
+          <p>
+            Your browser does not support iframes.
+            You can open the form here:
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLScJbX-5RyGqSVVZt3siKkbwkfy1ol0mMQCJynICxnngN92RFw/viewform">
+              Reviewer nominations form
+            </a>
+          </p>
+        </iframe>
       </div>
-    </section>
+    </article>
+  </div>
+</section>
+
 
   <!--  <section id="subscribe">
       <div class="grid">
