--- a/index.html
+++ b/index.html
@@ -32,6 +32,30 @@
         var(--bg);
     }
 
+    .toggle-card summary {
+  cursor: pointer;
+  font-weight: 600;
+  padding: 12px 14px;
+  border: 1px solid #1e232b;
+  border-radius: 12px;
+  background: #0f1318;
+  list-style: none;
+}
+
+.toggle-card summary::-webkit-details-marker {
+  display: none;
+}
+
+.toggle-card summary::after {
+  content: "▾";
+  float: right;
+  opacity: 0.8;
+}
+
+.toggle-card[open] summary::after {
+  content: "▴";
+}
+
     a{color:inherit;}
     .wrap{max-width:var(--maxw); margin:0 auto; padding:0 20px;}
 
@@ -437,31 +461,34 @@
   <div class="grid">
     <article class="card span12">
       <h3>Reviewer Nominations</h3>
-      <p>
-        Nominate yourself or others to serve as reviewers. Please fill out the form below.
-      </p>
+      <p>Nominate yourself or others to serve as reviewers.</p>
 
-      <div style="border:1px solid #1e232b; border-radius:16px; overflow:hidden; background:#0f1318;">
-        <iframe
-          src="https://docs.google.com/forms/d/e/1FAIpQLScJbX-5RyGqSVVZt3siKkbwkfy1ol0mMQCJynICxnngN92RFw/viewform?embedded=true"
-          width="100%"
-          height="900"
-          style="display:block; border:0;"
-          loading="lazy"
-          title="Reviewer nominations form"
-        >
-          <p>
-            Your browser does not support iframes.
-            You can open the form here:
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLScJbX-5RyGqSVVZt3siKkbwkfy1ol0mMQCJynICxnngN92RFw/viewform">
-              Reviewer nominations form
-            </a>
-          </p>
-        </iframe>
-      </div>
+      <details class="toggle-card">
+        <summary>Open the reviewer nomination form</summary>
+
+        <div style="margin-top:12px; border:1px solid #1e232b; border-radius:16px; overflow:hidden; background:#0f1318;">
+          <iframe
+            src="https://docs.google.com/forms/d/e/1FAIpQLScJbX-5RyGqSVVZt3siKkbwkfy1ol0mMQCJynICxnngN92RFw/viewform?embedded=true"
+            width="100%"
+            height="900"
+            style="display:block; border:0;"
+            loading="lazy"
+            title="Reviewer nominations form"
+          >
+            <p>
+              Your browser does not support iframes.
+              Open the form here:
+              <a href="https://docs.google.com/forms/d/e/1FAIpQLScJbX-5RyGqSVVZt3siKkbwkfy1ol0mMQCJynICxnngN92RFw/viewform">
+                Reviewer nominations form
+              </a>
+            </p>
+          </iframe>
+        </div>
+      </details>
     </article>
   </div>
 </section>
+
 
 
   <!--  <section id="subscribe">
